[project]
name = "wifi-tracker"
version = "0.1.2"
description = "Enhanced WiFi Usage Tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=7.2.2",
    "rich>=14.3.2",
]

[project.scripts]
wifi-tracker = "wifi_tracker_modules.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wifi_tracker_modules*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["psutil.*", "rich.*"]
ignore_missing_imports = true
